--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         </button>
       </div>
 
+    <div>
+        <h1> Najbardziej podoba mi się: </h1>
+    </div>
+
     <nav>
+
     <table class="table">
         <thead>
           <tr>
@@ -58,6 +63,21 @@
       <p>Ptak ten ma nie lada wymagania co do siedlisk, w obrębie których żeruje - jego występowaniu sprzyjają płytkie, przejrzyste wody o koniecznie wysokim wskaźniku czystości - jest to warunek na tyle ważny, że obecność zimorodka stała się swoistym potwierdzeniem najlepszej jakości zbiorników wodnych.</p>
    
     </div>
-
+    <form>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
 </body>
 </html>
