--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <thead>
           <tr>
             <th scope="col">Technologia</th>
-            <th scope="col">lubisz ją?</th>
+            <th scope="col">lubisz ją bardzo?</th>
             </tr>
         </thead>
         <tbody>
